Demo. Fix header align

--- a/demo/src/main.scss
+++ b/demo/src/main.scss
@@ -2,13 +2,9 @@ $h1Height: 40px;
 
 h1 {
   height: $h1Height;
-  line-height: $h1Height;
   padding: 0;
   margin: 0;
   border-bottom: 1px solid #eaeef3;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   background-color: $headerBgColor;
   color: $headerColor;
 }
